# elevenlabs-scribe-transcriber

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
src/: cli.ts  config.ts  errors.ts  index.ts  mcp-server.ts  media-converter.ts  transcriber.ts  transcription-processor.ts  types.ts  utils.ts  youtube-downloader.ts
transcriber/: __init__.py  main.py
